@@ -130,6 +130,7 @@ bound & safe:
    SB-PCL::*ALLOW-FORWARD-REFERENCED-CLASSES-IN-CPL-P* 
    SB-PCL::*IN-OBSOLETE-INSTANCE-TRAP* 
    SB-PCL::*PRECOMPILING-LAP* 
+   SB-PCL::*CACHE-MISS-VALUES-STACK* 
 
 believed protected by the compiler-lock:
    SB-PCL::*ALL-CTORS* 
@@ -138,7 +139,6 @@ believed protected by the compiler-lock:
    SB-PCL::*VAR-DECLARATIONS-WITHOUT-ARG* 
 
 potentially unsafe:
-   SB-PCL::*CACHE-MISS-VALUES-STACK* 
    SB-PCL::*CLASS-EQ-SPECIALIZER-METHODS* 
    SB-PCL::*EFFECTIVE-METHOD-CACHE* 
    SB-PCL::*EQL-SPECIALIZER-METHODS* 
@@ -806,7 +806,6 @@ SB-FASL::*CURRENT-FOP-TABLE-SIZE*
 SB-FASL::*FOP-STACK-POINTER-ON-ENTRY*
 SB-FASL::*FREE-FOP-TABLES* 
 SB-FASL::*LOAD-SYMBOL-BUFFER* 
-SB-FASL::*CURRENT-CATCH-BLOCK* 
 SB-FASL::*FASL-HEADER-STRING-START-STRING* 
 SB-FASL::DUMP-FOP* 
 SB-FASL::FOP-LIST* 
@@ -848,8 +847,7 @@ SB-KERNEL:*NEED-TO-COLLECT-GARBAGE*
 SB-KERNEL:*ALREADY-MAYBE-GCING*
 SB-KERNEL:*PSEUDO-ATOMIC-INTERRUPTED* ; bound
 SB-KERNEL::*GC-TRIGGER*  ; I think this is dead, check
-SB-IMPL::*CURRENT-UNWIND-PROTECT-BLOCK*
-SB-IMPL::*CURRENT-CATCH-BLOCK*
+SB-IMPL::*CURRENT-UNWIND-PROTECT-BLOCK* ; thread-local
 SB-IMPL::*READ-ONLY-SPACE-FREE-POINTER*
 SB-VM::*ALIEN-STACK*  ; bound in create_thread_struct()
 
@@ -1044,7 +1042,7 @@ SB-IMPL::*INTEGER-READER-SAFE-DIGITS*
 SB-IMPL::*TIMEZONE-TABLE* 
 SB-IMPL::*BQ-COMMA-FLAG*                                ; readonly
 SB-IMPL::*PRINT-OBJECT-IS-DISABLED-P*
-SB-IMPL::*MERGE-SORT-TEMP-VECTOR*  ; FIXME: SORT non-threadsafe, non-reentrant
+SB-IMPL::*MERGE-SORT-TEMP-VECTOR*   ; safe, allocated per-thread
 SB-IMPL::*PROFILE-HASH-CACHE* 
 SB-IMPL::*FIXNUM-POWER--1* 
 SB-IMPL::*SHARP-EQUAL-CIRCLE-TABLE*
@@ -1057,7 +1055,7 @@ SB-IMPL::*CLOSE-IN-PARENT*
 SB-IMPL::*IN-COMPILATION-UNIT*
 SB-IMPL::*CIRCULARITY-HASH-TABLE* 
 SB-IMPL::*LOAD-PRINT-STUFF*
-SB-IMPL::*ZAP-ARRAY-DATA-TEMP*       ; FIXME: ADJUST-ARRAY non-threadsafe
+SB-IMPL::*ZAP-ARRAY-DATA-TEMP*      ; safe, allocated per-thread
 SB-IMPL::*ACTIVE-PROCESSES* 
 SB-IMPL::*SHARP-SHARP-ALIST*     
 SB-IMPL::*BASE-POWER* 
